# YT247Desktop

./: .git-secrets-scrub.ps1  .gitignore  CMakeLists.txt  README.md  RUNNING.md  RUNNING.md.bak
build-mingw/: CMakeCache.txt
build-mingw-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/: main.cpp
